Restructure chrome extension build, some work on Firefox
This restrtuctures the chrome extension build so that it can be totally
self-contained

--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -1,6 +1,6 @@
-<link rel='import' href='../../../../../third_party/bower/polymer/polymer.html'>
-<link rel='import' href='../../../../../third_party/bower/core-icons/core-icons.html'>
-<link rel='import' href='../../../../../third_party/bower/core-collapse/core-collapse.html'>
+<link rel='import' href='../../bower/polymer/polymer.html'>
+<link rel='import' href='../../bower/core-icons/core-icons.html'>
+<link rel='import' href='../../bower/core-collapse/core-collapse.html'>
 <link rel='import' href='instance.html'>
 
 <polymer-element name='uproxy-contact' attributes='contact, isOnline' on-set-trying-to-get='{{ setIsTryingToGet }}'>
