--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../../../../../third_party/bower/polymer/polymer.html">
-<link rel='import' href='../../../../../third_party/bower/core-icons/core-icons.html'>
-<link rel="import" href="../../../../../third_party/bower/paper-button/paper-button.html">
+<link rel="import" href="../../bower/polymer/polymer.html">
+<link rel='import' href='../../bower/core-icons/core-icons.html'>
+<link rel="import" href="../../bower/paper-button/paper-button.html">
 
 <polymer-element name='uproxy-instance' attributes='user, instance, network'>
   <template>
