--- a/src/generic_ui/polymer/bubble.html
+++ b/src/generic_ui/polymer/bubble.html
@@ -1,5 +1,5 @@
-<link rel='import' href='../../../../../third_party/bower/paper-icon-button/paper-icon-button.html'>
-<link rel='import' href='../../../../../third_party/bower/paper-button/paper-button.html'>
+<link rel='import' href='../../bower/paper-icon-button/paper-icon-button.html'>
+<link rel='import' href='../../bower/paper-button/paper-button.html'>
 
 <!--
 uproxy-bubble will appear immediately below the previous element in the DOM.
