--- a/src/generic_ui/polymer/confirm.html
+++ b/src/generic_ui/polymer/confirm.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../../../../../third_party/bower/polymer/polymer.html">
+<link rel="import" href="../../bower/polymer/polymer.html">
 
 <polymer-element name='uproxy-confirm'>
   <template>
