--- a/src/generic_ui/polymer/copypaste.html
+++ b/src/generic_ui/polymer/copypaste.html
@@ -1,4 +1,4 @@
-<link rel='import' href='../../../../../third_party/bower/paper-button/paper-button.html'>
+<link rel='import' href='../../bower/paper-button/paper-button.html'>
 <link rel='import' href='bubble.html'>
 <link rel='import' href='app-bar.html'>
 
