--- a/src/generic_ui/polymer/description.html
+++ b/src/generic_ui/polymer/description.html
@@ -1,7 +1,7 @@
-<link rel='import' href='../../../../../third_party/bower/polymer/polymer.html'>
-<link rel='import' href='../../../../../third_party/bower/paper-input/paper-input-decorator.html'>
-<link rel='import' href='../../../../../third_party/bower/paper-button/paper-button.html'>
-<link rel='import' href='../../../../../third_party/bower/core-icons/core-icons.html'>
+<link rel='import' href='../../bower/polymer/polymer.html'>
+<link rel='import' href='../../bower/paper-input/paper-input-decorator.html'>
+<link rel='import' href='../../bower/paper-button/paper-button.html'>
+<link rel='import' href='../../bower/core-icons/core-icons.html'>
 
 <polymer-element name='uproxy-description' attributes=''>
   <template>
