--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -1,13 +1,13 @@
-<link rel="import" href="../../../../../third_party/bower/polymer/polymer.html">
-<link rel="import" href="../../../../../third_party/bower/core-signals/core-signals.html">
-<link rel="import" href="../../../../../third_party/bower/core-header-panel/core-header-panel.html">
-<link rel="import" href="../../../../../third_party/bower/core-drawer-panel/core-drawer-panel.html">
-<link rel="import" href="../../../../../third_party/bower/core-toolbar/core-toolbar.html">
-<link rel="import" href="../../../../../third_party/bower/core-icon-button/core-icon-button.html">
-<link rel='import' href='../../../../../third_party/bower/paper-dialog/paper-action-dialog.html'>
-<link rel="import" href="../../../../../third_party/bower/paper-tabs/paper-tabs.html">
-<link rel="import" href="../../../../../third_party/bower/paper-toast/paper-toast.html">
-<link rel="import" href="../../../../../third_party/bower/core-tooltip/core-tooltip.html">
+<link rel="import" href="../../bower/polymer/polymer.html">
+<link rel="import" href="../../bower/core-signals/core-signals.html">
+<link rel="import" href="../../bower/core-header-panel/core-header-panel.html">
+<link rel="import" href="../../bower/core-drawer-panel/core-drawer-panel.html">
+<link rel="import" href="../../bower/core-toolbar/core-toolbar.html">
+<link rel="import" href="../../bower/core-icon-button/core-icon-button.html">
+<link rel='import' href='../../bower/paper-dialog/paper-action-dialog.html'>
+<link rel="import" href="../../bower/paper-tabs/paper-tabs.html">
+<link rel="import" href="../../bower/paper-toast/paper-toast.html">
+<link rel="import" href="../../bower/core-tooltip/core-tooltip.html">
 <link rel="import" href='splash.html'>
 <link rel="import" href='roster.html'>
 <link rel="import" href='settings.html'>
