--- a/src/generic_ui/polymer/roster-group.html
+++ b/src/generic_ui/polymer/roster-group.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../../../../../third_party/bower/polymer/polymer.html">
+<link rel="import" href="../../bower/polymer/polymer.html">
 <link rel='import' href='contact.html'>
 
 <polymer-element name='uproxy-roster-group'
