--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -1,7 +1,7 @@
-<link rel="import" href="../../../../../third_party/bower/polymer/polymer.html">
-<link rel='import' href='../../../../../third_party/bower/paper-progress/paper-progress.html'>
-<link rel="import" href="../../../../../third_party/bower/core-signals/core-signals.html">
-<link rel="import" href="../../../../../third_party/bower/core-icons/social-icons.html">
+<link rel="import" href="../../bower/polymer/polymer.html">
+<link rel='import' href='../../bower/paper-progress/paper-progress.html'>
+<link rel="import" href="../../bower/core-signals/core-signals.html">
+<link rel="import" href="../../bower/core-icons/social-icons.html">
 <link rel='import' href='roster-group.html'>
 
 <polymer-element name='uproxy-roster' attributes='contacts'>
