--- a/src/generic_ui/polymer/troubleshoot.html
+++ b/src/generic_ui/polymer/troubleshoot.html
@@ -1,9 +1,9 @@
-<link rel='import' href='../../../../../third_party/bower/polymer/polymer.html'>
-<link rel='import' href='../../../../../third_party/bower/paper-button/paper-button.html'>
-<link rel='import' href='../../../../../third_party/bower/paper-dialog/paper-dialog.html'>
-<link rel='import' href='../../../../../third_party/bower/core-tooltip/core-tooltip.html'>
-<link rel='import' href='../../../../../third_party/bower/core-icons/core-icons.html'>
-<link rel='import' href='../../../../../third_party/bower/core-signals/core-signals.html'>
+<link rel='import' href='../../bower/polymer/polymer.html'>
+<link rel='import' href='../../bower/paper-button/paper-button.html'>
+<link rel='import' href='../../bower/paper-dialog/paper-dialog.html'>
+<link rel='import' href='../../bower/core-tooltip/core-tooltip.html'>
+<link rel='import' href='../../bower/core-icons/core-icons.html'>
+<link rel='import' href='../../bower/core-signals/core-signals.html'>
 <link rel='import' href='faq-link.html'>
 
 <polymer-element name='uproxy-troubleshoot' attributes='titleText'>
