--- a/src/generic_ui/view-logs.html
+++ b/src/generic_ui/view-logs.html
@@ -3,7 +3,7 @@
 <head>
   <title>uProxy Logs</title>
 
-  <script src='lib/webcomponentsjs/webcomponents.min.js'></script>
+  <script src='../bower/webcomponentsjs/webcomponents.min.js'></script>
   <script src='scripts/get_logs.js'></script>
 
   <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
