--- a/src/generic_ui/index.html
+++ b/src/generic_ui/index.html
@@ -24,6 +24,13 @@
       src: url(fonts/Quicksand-Bold.ttf);
       font-weight: 700;
     }
+    @font-face {
+      font-family: 'Material Icons';
+      font-style: normal;
+      font-weight: 400;
+      src: local('Material Icons'), local('MaterialIcons-Regular'), url(fonts/2fcrYFNaTjcS6g4U3t-Y5UEw0lE80llgEseQY3FEmqw.woff2) format('woff2');
+      /*local('Material Icons'), local('MaterialIcons-Regular'), */
+    }
     html {
       height: 100%;
       position: relative;
