--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -6,7 +6,7 @@
 <link rel="import" href="faq-link.html">
 <link rel='import' href='link.html'>
 
-<polymer-element name='uproxy-settings'>
+<polymer-element name='uproxy-settings' attributes='displayAdvancedSettings'>
 
   <template>
     <style>
