--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -103,7 +103,7 @@
 
       <!-- untrusted uProxy contacts -->
       <uproxy-roster-group
-          groupTitle='Other friends running uProxy'
+          groupTitle='Friends running uProxy'
           onlineContacts='{{ contacts.onlineUntrustedUproxy }}'
           offlineContacts='{{ contacts.offlineUntrustedUproxy }}'
           searchQuery='{{ searchQuery }}'></uproxy-roster-group>
