--- a/src/generic_ui/polymer/troubleshoot.html
+++ b/src/generic_ui/polymer/troubleshoot.html
@@ -86,7 +86,7 @@
       <!-- First screen in the dialog asks user if they want to diagnose their network. -->
       <div id='askToAnalyze' hidden?='{{ analyzingNetwork || analyzedNetwork }}'>
         <p>
-          It could be that your network's NAT type is incompatible with uProxy. Would you like to uProxy to analyze your network?
+          It could be that your network's NAT type is incompatible with uProxy. Would you like uProxy to analyze your network?
           <uproxy-faq-link anchor='doesUproxyLogData'>
             <core-icon icon="help"></core-icon>
           </uproxy-faq-link><br>
