Remove commented styling; underline more info link.

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -148,6 +148,10 @@
         top: 20%;
         z-index: 1002; /* Must be greater than core-overlay-backdrop */
       }
+      uproxy-faq-link .linkText {
+        text-decoration: underline;
+        color: rgba(0,0,0,0.40);
+      }
       paper-toast {
         position: fixed;
         left: 12px;
@@ -279,7 +283,12 @@
     </paper-action-dialog>
 
     <paper-action-dialog id='statsDialog' backdrop layered="false" heading="Welcome to uProxy" id="dialog">
-      <p>This is an alpha release of uProxy. You can help us improve uProxy by sharing anonymous metrics with the development team. Data reported is anonymized by the client and transmitted securely. <uproxy-faq-link anchor='doesUproxyLogData'>More information.</uproxy-faq-link> You can change your choice at any time, from the Settings menu.</p>
+      <p>
+        This is an alpha release of uProxy. You can help us improve uProxy by sharing anonymous metrics with the development team. Data reported is anonymized by the client and transmitted securely.
+        <uproxy-faq-link anchor='doesUproxyLogData'>
+          <span class='linkText'>More information.</span>
+        </uproxy-faq-link> You can change your choice at any time, from the Settings menu.
+      </p>
       <p>Would you like to enable anonymous metrics collection?</p>
       <paper-button affirmative class='dialogButton' on-tap='{{ enableStats }}'>I'm in</paper-button>
       <paper-button dismissive class='dialogButton' on-tap='{{ disableStats }}'>No thanks</paper-button>
