Move checkbox out of advanced settings. Add help link.

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -184,7 +184,7 @@
         hidden?='{{ ui.view !== ui_constants.View.ROSTER }}'>
       <core-header-panel drawer>
         <div class='content' fit>
-          <uproxy-settings id='settings' displayAdvancedSettings='{{ displayAdvancedSettings }}'></uproxy-settings>
+          <uproxy-settings id='settings'></uproxy-settings>
         </div>
       </core-header-panel>
       <core-header-panel main
