--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -7,7 +7,7 @@
 <link rel="import" href="faq-link.html">
 <link rel='import' href='link.html'>
 
-<polymer-element name='uproxy-settings' attributes='displayAdvancedSettings'>
+<polymer-element name='uproxy-settings'>
 
   <template>
     <style>
@@ -84,6 +84,22 @@
     paper-checkbox::shadow #checkboxLabel {
       font-size: 12px;
     }
+    #metricsCheckbox core-icon[icon="help"]{
+      height: 15px;
+      color: grey;
+      opacity: 0.6;
+      margin-bottom: 2px;
+      margin-right: 0px;
+      -webkit-transition: all 0.23s !important;
+      -moz-transition: all 0.23s !important;
+      transition: all 0.23s !important;
+    }
+    #metricsCheckbox core-icon[icon="help"]:hover {
+      opacity: 1;
+    }
+    #metricsCheckbox paper-checkbox, uproxy-faq-link {
+      display: table-cell;
+    }
     core-icon[icon=announcement],
     core-icon[icon=help],
     core-icon[icon=settings],
@@ -153,9 +169,12 @@
           <paper-button raised on-tap="{{resetStunServers}}">Reset</paper-button>
           <p id='confirmNewServer' class='advancedSettingsText' hidden>STUN server updated. New server will be used for future connections.</p>
           <p id='confirmResetServers' class='advancedSettingsText' hidden>STUN servers reset. Default servers will be used for future connections.</p>
-          <p>
-            <paper-checkbox checked='{{ model.globalSettings.statsReportingEnabled }}' label='Anonymous stats reporting enabled'></paper-checkbox>
-          </p>
+        </div>
+        <div id='metricsCheckbox'>
+          <paper-checkbox checked='{{ model.globalSettings.statsReportingEnabled }}' label='Anonymous stats reporting enabled'></paper-checkbox>
+          <uproxy-faq-link anchor='doesUproxyLogData'>
+            <core-icon icon="help"></core-icon>
+          </uproxy-faq-link>
         </div>
 
         <hr>
