add a stop button to simple freedom chat

--- a/samples/simple-freedom-chat/main.html
+++ b/samples/simple-freedom-chat/main.html
@@ -21,6 +21,12 @@
     <button id="sendButtonB">Send</button>
   </div>
 
+  <hr>
+
+  <div>
+    <button id="stopButton">Stop</button>
+  </div>
+
   <script src='main.core-env.static.js'></script>
 </body>
 </html>
