Create and use uproxy-action-dialog
This creates uproxy-action-dialog, a minor extension of
paper-action-dialog.  paper-action-dialog has the possibility of setting
the left and top positions of an element to be <0 which has the
obnoxious side-effect of ruining later calculations of what the width of
an element should be (and which then has the possibility of ruining
later calculations of what the position of the elemnt should be).
uproxy-action-dialog checks that the position set is always on-screen
and corrects that if not.

--- a/src/generic_ui/polymer/feedback.html
+++ b/src/generic_ui/polymer/feedback.html
@@ -4,11 +4,11 @@
 <link rel='import' href='../../bower/paper-input/paper-input-decorator.html'>
 <link rel='import' href='../../bower/paper-input/paper-autogrow-textarea.html'>
 <link rel='import' href='../../bower/core-label/core-label.html'>
-<link rel='import' href='../../bower/paper-dialog/paper-action-dialog.html'>
 <link rel='import' href='../../bower/core-tooltip/core-tooltip.html'>
 <link rel='import' href='../../bower/core-overlay/core-overlay.html'>
 <link rel='import' href='../../bower/core-signals/core-signals.html'>
 <link rel='import' href='faq-link.html'>
+<link rel='import' href='action-dialog.html'>
 
 <polymer-element name='uproxy-feedback' attributes=''>
   <template>
@@ -117,7 +117,7 @@
     paper-checkbox::shadow #checkbox {
       border-color: grey;
     }
-    paper-action-dialog {
+    uproxy-action-dialog {
       top: 30%;
       z-index: 1002; /* Must be greater than core-overlay-backdrop */
     }
@@ -179,12 +179,12 @@
         <div id='sendFeedback' on-tap='{{ sendFeedback }}'>SUBMIT FEEDBACK</div>
       </div>
     </core-overlay>
-    <paper-action-dialog backdrop layered="false" id='sendingFeedbackDialog' autoCloseDisabled='true'>
+    <uproxy-action-dialog backdrop layered="false" id='sendingFeedbackDialog' autoCloseDisabled='true'>
       <div id='sendingFeedback'>
         Sending feedback<br>
         <paper-progress indeterminate='true'></paper-progress>
       </div>
-    </paper-action-dialog>
+    </uproxy-action-dialog>
   </template>
   <script src='feedback.js'></script>
 </polymer-element>
