Update local FAQ to include info about metrics.

--- a/src/generic_ui/faq.html
+++ b/src/generic_ui/faq.html
@@ -88,12 +88,12 @@
 
     <p style="font-family: 'Quicksand'; font-size: 18px; line-height: 32px; text-align: left; color: black;">
       <a href="#whatIsUproxy">What is uProxy?</a><br>
-      <a href="#doesUproxyLogData">Does uProxy log data about me?</a><br>
       <a href="#whatDoGetAccess">What do "get access" and "share access" mean?</a><br>
       <a href="#whenIAmSharingAccess">When I am sharing access, what does the other party have access to?</a><br>
       <a href="#whyDoesUproxyConnect">Why does uProxy connect to social networks?</a><br>
       <a href="#howDoesUproxyHelp">How does uProxy help protect my Internet connection?</a><br>
       <a href="#whyIsItImportant">Why is it important that I trust the people I am connecting to?</a><br>
+      <a href="#doesUproxyLogData">Does uProxy log data about me?</a><br>
       <a href="#doesUproxyGiveMe">Does uProxy give me anonymity online?</a><br>
       <a href="#whatIsntProxied">What isn't proxied, and can uProxy leak information about the sites I visit?</a><br>
       <a href="#whoMadeUproxy">Who made uProxy?</a><br>
@@ -102,12 +102,6 @@
     <section id="whatIsUproxy">
       <h2>What is uProxy?</h2>
       <p>uProxy is an open source browser extension for Chrome and Firefox that lets users share their route to the Internet with each other. uProxy can make it much harder for a third party to monitor or interfere with the traffic of the user who is getting access. It's like a personalised VPN service that you can use to provide secure access to friends and family, and to yourself when you travel.</p>
-      <br><br><h4><a href="#">Back to top</a></h4>
-    </section>
-
-    <section id="doesUproxyLogData">
-      <h2>Does uProxy log data about me?</h2>
-      <p>No logs are sent to or collected on a server, unless a user chooses to submit logs from their current session as part of a bug report (feedback). Logs may contain personally identifiable information (PII). PII is never shared outside the uProxy team, and the logs that contain it are retained for at most three months before being deleted.</p>
       <br><br><h4><a href="#">Back to top</a></h4>
     </section>
 
@@ -139,6 +133,12 @@
     <section id="whyIsItImportant">
       <h2>Why is it important that I trust the people I am connecting to?</h2>
       <p>uProxy is designed to help friends get and share internet access, and there are risks to both getters and sharers if they connect to people they don't trust. If you get access from a sharer who is malicious, they may be able to spy on your web browsing or attempt a man-in-the-middle attack on your connections to secure sites. If you share access with someone you don't know, they may be able to use your connection to engage in illegal activity, and depending on the laws in your country, you may be legally responsible for facilitating that activity. Also, if you are using uProxy to get access to the Internet from a friend, it is important to trust that your friend's Internet connection is secure.</p>
+      <br><br><h4><a href="#">Back to top</a></h4>
+    </section>
+
+    <section id="doesUproxyLogData">
+      <h2>Does uProxy log data about me?</h2>
+      <p>We ask users if they would like to opt-in to report usage metrics. If they do, all metrics are anonymized on the client. In addition, when users manually use the Submit Feedback tool in the settings menu, they have the option to include logs from their recent uProxy activity. Logs may contain personally identifiable information (PII). PII is never shared outside the uProxy team, and the logs that contain it are retained for at most three months before being deleted. All reports are submitted in a way that makes it hard for an adversary to detect uProxy users. If a user does not turn on metrics collection or submit feedback, no data is sent to the uProxy team. More details about our data collection policy is available <a href="https://github.com/uProxy/uproxy/wiki/Data-Collection">here</a>.</p>
       <br><br><h4><a href="#">Back to top</a></h4>
     </section>
 
