--- a/src/generic_ui/polymer/feedback.html
+++ b/src/generic_ui/polymer/feedback.html
@@ -8,7 +8,7 @@
 <link rel='import' href='../../bower/core-overlay/core-overlay.html'>
 <link rel='import' href='../../bower/core-signals/core-signals.html'>
 <link rel='import' href='faq-link.html'>
-<link rel='import' href='action-dialog.html'>
+<link rel='import' href='dialog.html'>
 
 <polymer-element name='uproxy-feedback' attributes=''>
   <template>
