--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -17,7 +17,7 @@
 <link rel='import' href='feedback.html'>
 <link rel='import' href='reconnect.html'>
 <link rel='import' href='troubleshoot.html'>
-<link rel='import' href='action-dialog.html'>
+<link rel='import' href='dialog.html'>
 <link rel='import' href='browser-elements.html'>
 
 <polymer-element name='uproxy-root' attributes='model' on-update-view='{{ updateView }}' on-open-dialog='{{ openDialog }}'>
