Add Roboto to Firefox.

--- a/src/generic_ui/faq.html
+++ b/src/generic_ui/faq.html
@@ -37,6 +37,7 @@
       padding: 0 0 30px;
     }
     h4 {
+      font-family: "Quicksand", sans-serif;
       text-align: center;
       color: #909090;
       font-size: 15px;
