Fix opacity for firefox

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -51,7 +51,7 @@
       paper-tab::shadow .tab-content{
         font-size: 14px;
         text-transform: uppercase;
-        opacity: 1;
+        opacity: 1 !important;
       }
       .notSelected {
         opacity: 0.6;
