--- a/src/generic_ui/polymer/icons.html
+++ b/src/generic_ui/polymer/icons.html
@@ -21,3 +21,17 @@
     </defs>
   </svg>
 </core-iconset-svg>
+
+<core-iconset-svg id="uproxy-logo" iconsize="136">
+  <svg>
+    <defs>
+      <g id="logo">
+        <path fill="#0ED1BA" id="u" d="M68,109.8c-22.7,0-41.2-18.8-41.2-41.9c0-3.1,2.5-5.5,5.5-5.5c3.1,0,5.5,2.5,5.5,5.5 c0,17,13.5,30.8,30.1,30.8c16.6,0,30.1-13.8,30.1-30.8c0-3.1,2.5-5.5,5.5-5.5c3.1,0,5.5,2.5,5.5,5.5C109.2,91,90.7,109.8,68,109.8 "/>
+        <path fill="#0ED1BA" id="ring-top" class="ring" d="M134.4,67.9h-11.7c0-30.1-24.5-54.6-54.6-54.6c-30.1,0-54.6,24.5-54.6,54.6H1.6C1.6,31.3,31.4,1.6,68,1.6 C104.6,1.6,134.4,31.3,134.4,67.9"/>
+        <path fill="#00AC9B" id="ring-bottom" class="ring" d="M68,134.3c-36.6,0-66.4-29.8-66.4-66.4h11.7c0,30.1,24.5,54.6,54.6,54.6s54.6-24.5,54.6-54.6h11.7 C134.4,104.5,104.6,134.3,68,134.3"/>
+        <path fill="#00716A" id="dot-left" class="dot" d="M13.4,67.9c0,3.2-2.6,5.9-5.9,5.9c-3.2,0-5.9-2.6-5.9-5.9c0-3.2,2.6-5.9,5.9-5.9 C10.7,62.1,13.4,64.7,13.4,67.9"/>
+        <path fill="#00716A" id="dot-right" class="dot" d="M134.4,67.9c0,3.2-2.6,5.9-5.9,5.9c-3.2,0-5.9-2.6-5.9-5.9c0-3.2,2.6-5.9,5.9-5.9 C131.8,62.1,134.4,64.7,134.4,67.9"/>
+      </g>
+    </defs>
+  </svg>
+</core-iconset>
