--- a/src/generic_ui/disconnected.html
+++ b/src/generic_ui/disconnected.html
@@ -11,7 +11,7 @@
   <script src='scripts/disconnected.js'></script>
 
   <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
-  <link rel='import' href='polymer/vulcanized.html'>
+  <link rel='import' href='polymer/vulcanized-disconnected.html'>
 </head>
 
 <body>
