--- a/src/generic_ui/polymer/confirm.html
+++ b/src/generic_ui/polymer/confirm.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../bower/polymer/polymer.html">
+<link rel='import' href='../../bower/paper-button/paper-button.html'>
 
 <polymer-element name='uproxy-confirm'>
   <template>
