--- a/src/generic_ui/view-logs.html
+++ b/src/generic_ui/view-logs.html
@@ -7,7 +7,7 @@
   <script src='scripts/get_logs.js'></script>
 
   <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
-  <link rel='import' href='polymer/vulcanized.html'>
+  <link rel='import' href='polymer/vulcanized-view-logs.html'>
 </head>
 
 <body>
