--- a/src/generic_ui/polymer/confirm.html
+++ b/src/generic_ui/polymer/confirm.html
@@ -6,7 +6,7 @@
     <style>
       #errorBox {
         text-align: center;
-        max-width: 650px;
+        max-width: 700px;
         min-width: 200px;
         max-height:  250px;
         min-height:  150px;
@@ -24,13 +24,16 @@
         margin: 2em;
       }
       paper-button {
-        width: 100px;
         background: #009688;  /* dark green */
         color: white;
       }
       paper-button:disabled {
         background: #f1f1f1;
         color: rgb(112, 112, 112);
+      }
+      h1 {
+        font-size: 1.5em;
+        font-weight: 500;
       }
       img, h1, h2 {
         margin-top: 1em;
@@ -44,18 +47,17 @@
     <div id='errorBox'>
       <img src='../icons/128_error.png'>
       <div id='errorText'>
-        <h1>You are no longer browsing with uProxy</h1>
-        <h2>Try reconnecting with your friend to resolve.</h2>
+        <h1>Oops. You've been disconnected from your friend in uProxy!</h1>
+        <h1>To continue browsing securely, try reconnecting to your friend.
+        </h1>
+        <h1>If you'd like to start browsing the web without uProxy, please confirm below.</h1>
         <p>
-          If you wish to continue browsing with your local connection, proceed
-          with caution.  You will no longer be under the security and protection
-          of your friend. Before clicking Confirm, close any tabs you do not
-          want to access with your local connection.
+          Please proceed with caution. Your web traffic will no longer be routed through your friend. You may want to close any sensitive windows you have open, before proceeding.
         </p>
       </div> <!-- end of errorText -->
 
       <paper-button raised id='confirmButton' on-tap='{{ undoProxyConfig }}'>
-        Confirm
+        Continue browsing without uProxy
       </paper-button>
 
       <h2 id='proxyReverted' hidden>
