Update disconnect dialog title.

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -342,7 +342,7 @@
         opened="{{ ui.disconnectedWhileProxying }}" autoCloseDisabled>
       <img src='../icons/128_error.png'>
       <div id="disconnectDialogText">
-        <h1>Oops! You've been disconnected from your friend in uProxy.</h1>
+        <h1>Oops! You've been disconnected from your friend.</h1>
         <p>
           Please proceed with caution. Your web traffic will no longer be routed through your friend. You may want to close any sensitive windows you have open, before proceeding.
         </p>
