--- a/src/generic_ui/polymer/roster-group.html
+++ b/src/generic_ui/polymer/roster-group.html
@@ -2,7 +2,7 @@
 <link rel='import' href='contact.html'>
 
 <polymer-element name='uproxy-roster-group'
-    attributes='onlineContacts, offlineContacts, groupTitle, searchQuery, pending'>
+    attributes='onlineContacts, offlineContacts, groupTitle, searchQuery, mode'>
 
   <template>
     <style>
@@ -19,17 +19,11 @@
         {{ groupTitle }}
     </div>
 
-    <template repeat='{{ c in onlineContacts }}' vertical layout>
+    <template repeat='{{ c in sortedContacts }}' vertical layout>
       <uproxy-contact contact='{{ c }}'
           hidden?='{{ hideForSearch(c.name, searchQuery) }}'
-          isOnline='{{ true }}'>
-      </uproxy-contact>
-    </template>
-
-    <template repeat='{{ c in offlineContacts }}' vertical layout>
-      <uproxy-contact contact='{{ c }}'
-          hidden?='{{ hideForSearch(c.name, searchQuery) }}'
-          isOnline='{{ false }}'>
+          isOnline='{{ c.isOnline }}'
+          on-contact-changed='{{ contactsChanged }}'>
       </uproxy-contact>
     </template>
 
