--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -4,7 +4,7 @@
 <link rel="import" href="../../bower/core-icons/social-icons.html">
 <link rel='import' href='roster-group.html'>
 
-<polymer-element name='uproxy-roster' attributes='contacts'>
+<polymer-element name='uproxy-roster' attributes='contacts, mode'>
 
   <template>
     <style>
@@ -93,11 +93,11 @@
 
       <!-- uProxy contacts offering access to or requesting access from user -->
       <uproxy-roster-group
-          groupTitle='{{model.globalSettings.mode==ui_constants.Mode.GET ? "Offers" : "Requests"}}'
+          groupTitle='{{mode==ui_constants.Mode.GET ? "Offers" : "Requests"}}'
           onlineContacts='{{ contacts.onlinePending }}'
           offlineContacts='{{ contacts.offlinePending }}'
           searchQuery='{{ searchQuery }}'
-          pending="{{ true }}"></uproxy-roster-group>
+          mode='{{ mode }}'></uproxy-roster-group>
 
       <!-- Hide HR above Trusted if there are no Trusted contacts, or if there are no Pending contacts -->
       <hr color="#eee"
@@ -105,10 +105,11 @@
 
       <!-- trusted uProxy contacts -->
       <uproxy-roster-group
-          groupTitle='{{model.globalSettings.mode==ui_constants.Mode.GET ? "Friends you can get access from" : "Friends who can get access from you"}}'
+          groupTitle='{{mode==ui_constants.Mode.GET ? "Friends you can get access from" : "Friends who can get access from you"}}'
           onlineContacts='{{ contacts.onlineTrustedUproxy }}'
           offlineContacts='{{ contacts.offlineTrustedUproxy }}'
-          searchQuery='{{ searchQuery }}'></uproxy-roster-group>
+          searchQuery='{{ searchQuery }}'
+          mode='{{ mode }}'></uproxy-roster-group>
 
       <!-- Hide HR above Untrusted if there are no Untrusted contacts, or if there are no Trusted & Pending contacts -->
       <hr color="#eee"
@@ -119,7 +120,8 @@
           groupTitle='Friends who have uProxy'
           onlineContacts='{{ contacts.onlineUntrustedUproxy }}'
           offlineContacts='{{ contacts.offlineUntrustedUproxy }}'
-          searchQuery='{{ searchQuery }}'></uproxy-roster-group>
+          searchQuery='{{ searchQuery }}'
+          mode='{{ mode }}'></uproxy-roster-group>
     </div>
 
   </template>
