Add an svg logout icon with no dots, use it
This is just a modified version of the core-icon with the dots having
been removed.

Fixes #1322

--- a/src/generic_ui/polymer/icons.html
+++ b/src/generic_ui/polymer/icons.html
@@ -18,6 +18,9 @@
       <g id="stats-enabled">
         <path d="M20.4,1.2H3.6c-1.3,0-2.4,1.1-2.4,2.4v16.8c0,1.3,1.1,2.4,2.4,2.4h16.8c1.3,0,2.4-1.1,2.4-2.4V3.6 C22.8,2.2,21.8,1.2,20.4,1.2z M20.4,9.9L13.2,18l-4.8-4.8L3.6,18v-3.6l4.8-4.8l4.8,4.8l7.2-8.1V9.9z"/>
       </g>
+      <g id="logout">
+        <path d="m 13,2 -2,0 0,10 2,0 z m 3.56,2.44 -1.45,1.45 C 16.84,6.94 18,8.83 18,11 18,14.31 15.31,17 12,17 8.69,17 6,14.31 6,11 6,8.83 7.16,6.94 8.88,5.88 L 7.44,4.44 C 5.36,5.88 4,8.28 4,11 c 0,4.42 3.58,8 8,8 4.42,0 8,-3.58 8,-8 0,-2.72 -1.36,-5.12 -3.44,-6.56 z" />
+      </g>
     </defs>
   </svg>
 </core-iconset-svg>
