--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -110,11 +110,7 @@
     #metricsCheckbox paper-checkbox, uproxy-faq-link {
       display: table-cell;
     }
-    core-icon[icon=announcement],
-    core-icon[icon=help],
-    core-icon[icon=settings],
-    core-icon[icon=refresh],
-    core-icon[icon=settings-power] {
+    #settingsLinks core-icon {
       height: 20px;
       width: 20px;
       margin-right: 5px;
@@ -195,7 +191,7 @@
         </uproxy-link>
 
         <uproxy-link on-tap='{{ logOut }}' role='button'>
-          <core-icon icon="settings-power"></core-icon>
+          <core-icon icon="uproxy-icons:logout"></core-icon>
           Log-out of uProxy
         </uproxy-link>
       </div>
